# mononoke

./: .gitignore  README.md  dagstore.proto  hgit.cabal  merkle-dag-compare.cabal  package.yaml  stack.yaml
app/: Main.hs
app/Runtime/: Capabilities.hs  FileIO.hs  Types.hs
examples/after1/node1/: leaf4
hgit/: hgit.cabal
hgit-ext/: hgit-ext.cabal
hgit-ext/app/: Main.hs
hgit-ext/app/Runtime/: Commands.hs  FileIO.hs  RunCmd.hs
hgit/src/HGit/Core/: Diff.hs  Types.hs
src/: Commands.hs  Compare.hs  Errors.hs  FileIO.hs  Main.hs  Search.hs
src/Data/Aeson/: Orphans.hs
src/Diff/: Types.hs
src/HGit/: Client.hs  Diff.hs  Merge.hs  Render.hs  Repo.hs  Serialization.hs  Store.hs
src/HGit/Core/: Merge.hs  MergeTrie.hs  Snapshot.hs  Types.hs
src/HGit/Core/MergeTrie/: Render.hs
src/HGit/Core/Types/: Render.hs
src/HGit/GUI/: BrowseWIPT.hs  CSS.hs  Core.hs  Elements.hs  Messages.hs  Modal.hs  State.hs  WorkingMergeTrie.hs
src/HGit/Generic/: BlakeHash.hs  HRecursionSchemes.hs  RecursionSchemes.hs
src/HGit/Render/: Utils.hs
src/HGit/Runtime/: Network.hs
src/HGit/Store/: Deref.hs  FileSystem.hs
src/HGit/Types/: HGit.hs  Merkle.hs  RepoState.hs
src/Merkle/: App.hs  Functors.hs  Store.hs  Types.hs
src/Merkle/Bonsai/: MergeTrie.hs  Types.hs
src/Merkle/Bonsai/MergeTrie/: Render.hs
src/Merkle/Bonsai/Types/: Render.hs
src/Merkle/GUI/: BrowseWIPT.hs  CSS.hs  Core.hs  Elements.hs  Messages.hs  Modal.hs  State.hs  WorkingMergeTrie.hs
src/Merkle/Generic/: BlakeHash.hs  DAGStore.hs  HRecursionSchemes.hs  Merkle.hs
src/Merkle/Render/: Utils.hs
src/Merkle/Store/: Deref.hs  FileSystem.hs  Network.hs
src/Merkle/Tree/: Encoding.hs  Types.hs
src/Util/: HRecursionSchemes.hs  MyCompose.hs  RecursionSchemes.hs  Util.hs
test/: Main.hs  Spec.hs
test/HGit/Core/: DiffSpec.hs  MergeSpec.hs  TestUtils.hs
