cabal-version: 1.12

name:           hgit-ext
version:        0.1.0.0
category:       Development
author:         Paul Kinsky
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/pkinsky/hgit
executable hgit
  main-is: Main.hs
  other-modules:
      Runtime.Capabilities
      Runtime.Commands
      Runtime.FileIO
      Runtime.RunCmd
      Runtime.Types
  hs-source-dirs:
      app
  default-extensions: DerivingStrategies DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures NoStarIsType OverloadedStrings PolyKinds ScopedTypeVariables TupleSections StandaloneDeriving TemplateHaskell TypeApplications TypeOperators
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , base >=4.8
    , bifunctors
    , bytestring
    , containers
    , deriving-compat
    , directory
    , hgit
    , http-client
    , merkle-schemes
    , merkle-schemes-ext
    , mtl
    , optparse-applicative
    , recursion-schemes
    , safe-exceptions
    , servant
    , servant-client
    , servant-server
    , text
    , transformers
    , warp
  default-language: Haskell2010
