cabal-version: 1.12

name:           hgit
version:        0.1.0.0
synopsis:       merkle all the things
category:       Development
homepage:       https://github.com/pkinsky/hgit#readme
bug-reports:    https://github.com/pkinsky/hgit/issues
author:         Paul Kinsky
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/pkinsky/hgit

library
  exposed-modules:
      HGit.Core.Diff
      HGit.Core.Merge
      HGit.Core.Types
  other-modules:
      Paths_hgit
  hs-source-dirs:
      src
  default-extensions: DerivingStrategies DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures NoStarIsType OverloadedStrings PolyKinds ScopedTypeVariables TupleSections StandaloneDeriving TemplateHaskell TypeApplications TypeOperators
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , base >=4.8
    , bifunctors
    , bytestring
    , containers
    , deriving-compat
    , merkle-schemes
    , mtl
    , recursion-schemes
    , safe-exceptions
    , text
    , transformers
  default-language: Haskell2010

-- test-suite spec
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules:
--       HGit.Core.DiffSpec
--       HGit.Core.MergeSpec
--       HGit.Core.TestUtils
--       Paths_hgit
--   hs-source-dirs:
--       test
--   default-extensions: DerivingStrategies DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures NoStarIsType OverloadedStrings PolyKinds ScopedTypeVariables TupleSections StandaloneDeriving TemplateHaskell TypeApplications TypeOperators
--   ghc-options: -Wall -Werror
--   build-tool-depends: -- TODO REMOVE???
--       hspec-discover:hspec-discover
--   build-depends:
--       aeson
--     , base >=4.8
--     , bifunctors
--     , bytestring
--     , containers
--     , deriving-compat
--     , hedgehog
--     , hgit
--     , hspec
--     , merkle-schemes
--     , mtl
--     , recursion-schemes
--     , safe-exceptions
--     , temporary
--     , text
--     , transformers
--   default-language: Haskell2010
